<resources>
    <string name="login_etUsername">User name </string>
    <string name="login_bt">Login</string>
    <string name="not_register_click_here">Sign Up</string>
    <string name="login_etPassword">Password</string>
    <string name="register_etUsername">Your name</string>
    <string name="register_etUserNickname">User name</string>
    <string name="register_etPassword">Password</string>
    <string name="register_etConfirmPassword">Confirm the password</string>
    <string name="register_bt">Register</string>
    <string name="enter_your_phone_number">Enter your phone number</string>
    <string name="sigh_up">Sigh Up</string>
    <string name="welcome_to_bookinder">Welcome to Bookinder!</string>
    <string name="let_us_know_you_better">let us know you better</string>
    <string name="done">Done</string>
    <string name="generes_and_interests">Generes and interests</string>
    <string name="the_name_of_the_book">name of the book</string>
    <string name="email">Email</string>
    <string name="app_name">Bookinder</string>
    <!-- to toggle the open close button of the navigation drawer -->
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Profile</string>
    <string name="menu_gallery">Books for sale</string>
    <string name="menu_slideshow">Books for exchange</string>
    <string name="title_activity_my_profile">MyProfileActivity</string>
</resources>