<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:background="@mipmap/background"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.727"
        tools:layout_editor_absoluteX="0dp">

        <TextView
            android:background="@color/background"
            android:id="@+id/sin"
            android:layout_width="150sp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp"
            android:layout_marginStart="100sp"
            android:textSize="40sp"
            android:ems="10"
            android:hint="@string/sigh_up"
            android:minHeight="48dp"
            android:textColorHint="@color/white" />

        <EditText
            android:background="@color/background"
            android:id="@+id/signup_fullname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:ems="10"
            android:hint="@string/register_etUsername"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:textColorHint="@color/white" />

        <EditText
            android:background="@color/background"
            android:id="@+id/signup_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:ems="10"
            android:hint="Email"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:textColorHint="@color/white" />

        <EditText
            android:background="@color/background"
            android:id="@+id/signup_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:ems="10"
            android:hint="@string/register_etPassword"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:textColorHint="@color/white" />

        <EditText
            android:background="@color/background"
            android:id="@+id/signup_confirm_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:ems="10"
            android:hint="@string/register_etConfirmPassword"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:textColorHint="@color/white" />

        <EditText
            android:background="@color/background"
            android:id="@+id/signup_phone_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:ems="10"
            android:hint="@string/enter_your_phone_number"
            android:inputType="text"
            android:minHeight="48dp"
            android:textColorHint="@color/white" />

        <TextView
            android:background="@color/background"
            android:id="@+id/ErrorText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="monospace"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="#BD0404"
            android:textSize="24sp"
            android:typeface="monospace"
            tools:text="Test Text" />

        <Button
            android:id="@+id/signup_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/register_bt" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>